# homework

./: .coverage  .gitignore  README.md  generators.py  masks.py  processing.py  pyproject.toml  widget.py
htmlcov/: class_index.html  function_index.html  generators_py.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: __init__.py  masks.py  processing.py  widget.py
tests/: test_generators.py  test_masks.py  test_processing.py  test_widget.py
widget/: mask_utils.py
